--- a/help.html
+++ b/help.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AYUDA</title>
     <!-- Estilos CSS -->
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="./css/pages/help.css">
+    <link rel="stylesheet" href="./css/common.css">
     <link rel="shortcut icon" href="./img/nube.png">
 </head>
+
 
 <body>
     <header>
@@ -27,21 +29,26 @@
     <!-- Contenido principal de la página -->
     <main>
         <h2>Ayuda Clima App v.1.0</h2>
-        <p>Esta App te permite consultar el clima de una ciudad en particular utilizando la API de <a
-            href="https://openweathermap.org/api" target="blank">OpenWheatherMap</a></p>
+        <p>Esta App te permite consultar el clima de una ciudad en particular utilizando la API de  <br><a
+                href="https://openweathermap.org/api" target="blank">OpenWheatherMap</a></p>
 
-    <p>Esta App te permite consultar el clima de una ciudad en particular utilizando la API de <a
-            href="./add-city.html" target="_blank">Agregar Ciudad</a> y luego seleccionar la Ciudad en cuestión
-        desde la página <a href="./index.html" target="_blank">Clima</a></p>
+        <p>Esta App te permite consultar el clima de una ciudad en particular utilizando la API de <a
+                href="./add-city.html" target="_blank">Agregar Ciudad</a> y luego seleccionar la Ciudad en <br> cuestión
+            desde la página <a href="./index.html" target="_blank">Clima</a></p>
         <section id="form-city-list">
             <form>
-                Nombre:<input type="text" required> <br/>
-                Email:<input type="email" required> <br/>
-                Mensaje:<textarea name="Mensaje" rows="15" cols="45"></textarea> <br/>
-                <button><b>Limpiar</b></button>
-                <button><b>Enviar</b></button>
+                Nombre: <br><input class="campodetexto" type="text"  required> <br />
+                Email: <br><input class="campodetexto" type="email" required> <br />
+                Mensaje: <br><textarea name="Mensaje" rows="12" cols="30"></textarea> <br />
+                <div id="center">
+                <button class="botones" type="reset"><b>Limpiar</b></button>
+                <button class="botones"><b>Enviar</b></button>
+                </div>
+                <br>
+                <br>
+                <p class="Emailerror">Ingrese un Email valido</p>
             </form>
-                    <!-- Sección donde se debe colocar el formulario, con el select y el
+            <!-- Sección donde se debe colocar el formulario, con el select y el
 botón de consultar -->
         </section>
         <!-- Sección donde se debe mostrar el clima de la ciudad -->
