--- a/help.html
+++ b/help.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script defer src="./js/common.js"></script>
+    <script src="./js/pages/help.js"></script>
     <title>AYUDA</title>
     <!-- Estilos CSS -->
     <link rel="stylesheet" href="./css/pages/help.css">
@@ -36,17 +38,19 @@
                 href="./add-city.html" target="_blank">Agregar Ciudad</a> y luego seleccionar la Ciudad en <br> cuestión
             desde la página <a href="./index.html" target="_blank">Clima</a></p>
         <section id="form-city-list">
-            <form>
-                Nombre: <br><input class="campodetexto" type="text"  required> <br />
-                Email: <br><input class="campodetexto" type="email" required> <br />
+            <form id="formulario_ayuda">
+                Nombre: <br><input class="campodetexto" type="text"> <br />
+                Email: <br><input class="campodetexto" type="email" id="email"> <br />
                 Mensaje: <br><textarea name="Mensaje" rows="12" cols="30"></textarea> <br />
                 <div id="center">
-                <button class="botones" type="reset"><b>Limpiar</b></button>
-                <button class="botones"><b>Enviar</b></button>
+            
+                <input class="botones" type="button" value="Limpiar" onclick="LimpiarFormulario()"></input>
+                
+                <input class="botones" type="button" value="Enviar" onclick="EnviarFormulario()"></input>
                 </div>
                 <br>
                 <br>
-                <p class="Emailerror">Ingrese un Email valido</p>
+                <p id="Emailerror" style="display: none;">Ingrese un Email valido</p>
             </form>
             <!-- Sección donde se debe colocar el formulario, con el select y el
 botón de consultar -->
