--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="./js/common.js"></script>
-    <script src="./js/pages/index.js"></script>
+    <script defer src="./js/pages/index.js"></script>
     <title>CLIMA</title>
     <!-- Estilos CSS -->
     <link rel="stylesheet" href="./css/pages/index.css">
@@ -45,9 +45,9 @@ botón de consultar -->
         </section>
         <br>
         <section id="section-weather-result">
-            <div class="card" style="display: none;">
+            <div class="card" id="card" style="display: none;">
                 <h3 id="Ciudad"></h3>
-                <img src="./img/pelotanaranja.png" alt="Rosario" width="100">
+                <img src="./img/pelotanaranja.png" alt="">
                 <p id="Grados"></p>
                 <p id="SensacionTermica"></p>
                 <p id="Humedad"></p>
