--- a/help.html
+++ b/help.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="./js/common.js"></script>
-    <script src="./js/pages/help.js"></script>
+    <script defer src="./js/pages/help.js"></script>
     <title>AYUDA</title>
     <!-- Estilos CSS -->
     <link rel="stylesheet" href="./css/pages/help.css">
