--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <h2>El Clima Ahora</h2>
         <section id="form-city-list">
             <form action="" id="formulario_index">
-                <select class="ciudades" id="ciudades" onclick="vacio()">
+                <select class="ciudades" id="ciudades" onclick="NoCiudadCargada()">
                     <option value="" disabled selected>Seleccionar ciudad</option>
                     
                 </select>
-                <input  type="button" class="boton" id="boton" value="Consultar" onclick="callAPI()"></input>
+                <input  type="button" class="boton" id="boton" value="Consultar" onclick="FuncionAPI()"></input>
             </form>
             <!-- Sección donde se debe colocar el formulario, con el select y el
 botón de consultar -->
